MODEXPW-567 - Update to mod-data-export-worker Java 21